Fix <pre> width overflow with word-wrap: break-word

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #eeeeee;
     max-width: 800px;
     margin: auto;
+    word-wrap: break-word;
 }
 
 a {
